# osrs-prices

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  create-draft-release.yml  create-tag.yml  docs.yml  draft-release.yml  python-app.yml  release-please.yml  test.yml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/api/client/: index.html
1.0.0/api/exceptions/: index.html
1.0.0/api/models/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/api/client/: index.html
1.1.0/api/exceptions/: index.html
1.1.0/api/models/: index.html
1.1.0/search/: search_index.json
docs/api/: client.md  exceptions.md  models.md
notebooks/: scratch.ipynb
src/osrs_prices/: __init__.py  cache.py  client.py  constants.py  exceptions.py  pandas.py
src/osrs_prices/endpoints/: __init__.py  averages.py  base.py  latest.py  mapping.py  timeseries.py
src/osrs_prices/models/: __init__.py  base.py  enriched.py  items.py  prices.py  timeseries.py
tests/: __init__.py  conftest.py  test_client.py  test_greeting.py  test_osrs_prices.py
tests/integration/: __init__.py  test_api.py  test_client.py
tests/unit/: __init__.py  test_cache.py  test_client.py  test_dataframe.py  test_endpoints.py  test_enriched.py  test_models.py
