[project]
name = "osrs-prices"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt Flowers", email = "mattmflowers28@gmail.com" }
]
requires-python = ">=3.9,<3.15"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
